fix(toast): corrige caminho do ícone errado e z-index

--- a/src/app/shared/components/toast/toast.component.css
+++ b/src/app/shared/components/toast/toast.component.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0px;
   right: 20px;
-  z-index: 1100;
+  z-index: 10000;
 }
 
 .toast{
